--- a/ufo.ipynb
+++ b/ufo.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Users\\1060240\\AppData\\Local\\Temp\\ipykernel_15772\\866934925.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "E:\\Users\\1060240\\AppData\\Local\\Temp\\ipykernel_17048\\806285384.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  df=pd.read_csv('data\\complete.csv',encoding='UTF-8',error_bad_lines=False,warn_bad_lines=False,low_memory=False)\n",
-      "E:\\Users\\1060240\\AppData\\Local\\Temp\\ipykernel_15772\\866934925.py:1: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "E:\\Users\\1060240\\AppData\\Local\\Temp\\ipykernel_17048\\806285384.py:1: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  df=pd.read_csv('data\\complete.csv',encoding='UTF-8',error_bad_lines=False,warn_bad_lines=False,low_memory=False)\n"
@@ -131,90 +131,32 @@
        "      <td>29.38421</td>\n",
        "      <td>-98.581082</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10/10/1955 17:00</td>\n",
-       "      <td>chester (uk/england)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>circle</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20 seconds</td>\n",
-       "      <td>Green/Orange circular disc over Chester&amp;#44 En...</td>\n",
-       "      <td>1/21/2008</td>\n",
-       "      <td>53.2</td>\n",
-       "      <td>-2.916667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10/10/1956 21:00</td>\n",
-       "      <td>edna</td>\n",
-       "      <td>tx</td>\n",
-       "      <td>us</td>\n",
-       "      <td>circle</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1/2 hour</td>\n",
-       "      <td>My older brother and twin sister were leaving ...</td>\n",
-       "      <td>1/17/2004</td>\n",
-       "      <td>28.9783333</td>\n",
-       "      <td>-96.645833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10/10/1960 20:00</td>\n",
-       "      <td>kaneohe</td>\n",
-       "      <td>hi</td>\n",
-       "      <td>us</td>\n",
-       "      <td>light</td>\n",
-       "      <td>900</td>\n",
-       "      <td>15 minutes</td>\n",
-       "      <td>AS a Marine 1st Lt. flying an FJ4B fighter/att...</td>\n",
-       "      <td>1/22/2004</td>\n",
-       "      <td>21.4180556</td>\n",
-       "      <td>-157.803611</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           datetime                  city state country     shape  \\\n",
-       "0  10/10/1949 20:30            san marcos    tx      us  cylinder   \n",
-       "1  10/10/1949 21:00          lackland afb    tx     NaN     light   \n",
-       "2  10/10/1955 17:00  chester (uk/england)   NaN      gb    circle   \n",
-       "3  10/10/1956 21:00                  edna    tx      us    circle   \n",
-       "4  10/10/1960 20:00               kaneohe    hi      us     light   \n",
+       "           datetime          city state country     shape duration (seconds)  \\\n",
+       "0  10/10/1949 20:30    san marcos    tx      us  cylinder               2700   \n",
+       "1  10/10/1949 21:00  lackland afb    tx     NaN     light               7200   \n",
        "\n",
-       "  duration (seconds) duration (hours/min)  \\\n",
-       "0               2700           45 minutes   \n",
-       "1               7200              1-2 hrs   \n",
-       "2                 20           20 seconds   \n",
-       "3                 20             1/2 hour   \n",
-       "4                900           15 minutes   \n",
+       "  duration (hours/min)                                           comments  \\\n",
+       "0           45 minutes  This event took place in early fall around 194...   \n",
+       "1              1-2 hrs  1949 Lackland AFB&#44 TX.  Lights racing acros...   \n",
        "\n",
-       "                                            comments date posted    latitude  \\\n",
-       "0  This event took place in early fall around 194...   4/27/2004  29.8830556   \n",
-       "1  1949 Lackland AFB&#44 TX.  Lights racing acros...  12/16/2005    29.38421   \n",
-       "2  Green/Orange circular disc over Chester&#44 En...   1/21/2008        53.2   \n",
-       "3  My older brother and twin sister were leaving ...   1/17/2004  28.9783333   \n",
-       "4  AS a Marine 1st Lt. flying an FJ4B fighter/att...   1/22/2004  21.4180556   \n",
-       "\n",
-       "    longitude  \n",
-       "0  -97.941111  \n",
-       "1  -98.581082  \n",
-       "2   -2.916667  \n",
-       "3  -96.645833  \n",
-       "4 -157.803611  "
+       "  date posted    latitude  longitude  \n",
+       "0   4/27/2004  29.8830556 -97.941111  \n",
+       "1  12/16/2005    29.38421 -98.581082  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df=pd.read_csv('data\\complete.csv',encoding='UTF-8',error_bad_lines=False,warn_bad_lines=False,low_memory=False)\n",
-    "df.head(5)"
+    "df.head(2)"
    ]
   },
   {
